MODUL-1071 - Corrections bug l'alignement des images dans RTE

--- a/packages/modul-components/src/styles/mixins/_rte-internal.scss
+++ b/packages/modul-components/src/styles/mixins/_rte-internal.scss
@@ -9,6 +9,7 @@ $m-fr-btn-popup-size: 38px;
 
 .fr-dib.fr-dib {
     max-width: 100%;
+    display: block;
 
     &.m--fr-image-block-left {
         margin: $m-spacing;
